--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ build/
 !gradle/wrapper/gradle-wrapper.properties
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+/src/main/resources/application-slezkin.yml
+gradle
 ### STS ###
 .apt_generated
 .classpath
